# BBHNet

./: .gitmodules
libs/analysis/: pyproject.toml
libs/architectures/: pyproject.toml
libs/architectures/aframe/architectures/: __init__.py  aresgw.py  preprocessor.py  resnet2d.py  wrapper.py
libs/logging/: pyproject.toml
libs/priors/: pyproject.toml
libs/priors/aframe/priors/: priors.py
libs/trainer/aframe/trainer/: trainer.py
projects/inference_rates/: pyproject.toml
projects/inference_rates/multi_rate_export/: pyproject.toml
projects/inference_rates/multi_rate_export/multi_rate_export/: main.py
projects/inference_rates/multi_rate_infer/: pyproject.toml
projects/inference_rates/multi_rate_infer/multi_rate_infer/: main.py
projects/inference_rates/multi_rate_plots/: pyproject.toml
projects/inference_rates/multi_rate_plots/multi_rate_plots/: sensitive_volumes.py
projects/longevity/: pyproject.toml
projects/longevity/data_gen/: environment.yaml  pyproject.toml
projects/longevity/data_gen/data_gen/scripts/: background.py  main.py
projects/longevity/exporting/: pyproject.toml
projects/longevity/exporting/exporting/: main.py
projects/longevity/infer/: main.py  pyproject.toml
projects/longevity/inference/: pyproject.toml
projects/longevity/inference/inference/: main.py
projects/longevity/results/: environment.yaml  plots.ipynb  pyproject.toml
projects/longevity/results/results/: main.py  plot.py
projects/longevity/training/: pyproject.toml  training.toml
projects/longevity/training/training/: main.py
projects/sandbox/: pyproject.toml
projects/sandbox/datagen/: pyproject.toml
projects/sandbox/datagen/datagen/scripts/: __init__.py  background.py  glitches.py  timeslide_waveforms.py  waveforms.py
projects/sandbox/export/export/: main.py  snapshotter.py
projects/sandbox/infer/infer/: callback.py  deploy.py  main.py
projects/sandbox/online_deployment/: environment.yaml  pyproject.toml
projects/sandbox/online_deployment/online_deployment/: buffer.py  buffer_old.py  dataloading.py  main.py  parameter_estimation.py  snapshot_whitener.py  trigger.py
projects/sandbox/plots/: environment.yaml  pyproject.toml
projects/sandbox/plots/plots/: gwtc3.py  sensitive_volume.py  utils.py  vetoes.py
projects/sandbox/train/: pyproject.toml
projects/sandbox/train/train/: augmentations.py  augmentor.py  train.py  utils.py  validation.py
