[tool.poetry]
name = "infer"
version = "0.1.0"
description = "Run inference over datasets over time"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
infer = {path = "../../sandbox/infer", develop = true}

[tool.poetry.scripts]
launch-infer = "infer:main" 

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
