[tool.poetry]
name = "training"
version = "0.1.0"
description = "Retrain neural networks on interval datasets"
authors = ["Ethan Jacob Marx <ethan.marx@ligo.org>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
train = {path = "../../sandbox/train", develop = true}
typeo = {git = "https://github.com/ML4GW/typeo.git", branch = "main"}

[tool.poetry.scripts]
launch-train = "training.main:main" 

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
